--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.10",
+    "@ai-sdk/react": "^3.0.42",
     "@supabase/supabase-js": "^2.90.1",
+    "ai": "^6.0.40",
     "date-fns": "^4.1.0",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
